--- a/style/index.css
+++ b/style/index.css
@@ -1,8 +1,92 @@
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap");
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  width: 100vw;
+}
+
+.secondary img, .third img, .fourth img {
+  width: 250px;
+}
+
+.intro {
+  width: 100vw;
+  height: 530px;
+  background: linear-gradient(to bottom, hsl(13deg, 100%, 72%), hsl(353deg, 100%, 62%));
+  border-end-start-radius: 100px;
+  color: hsl(0deg, 0%, 100%);
+}
+.intro__logo {
+  width: 80px;
+}
+.intro__hamburger {
+  width: 30px;
+}
+.intro_bg {
+  width: 100%;
+  height: 100%;
+  padding: 45px 30px 0px;
+  background-image: url("./../../images/bg-pattern-intro-mobile.svg");
+  background-position-x: -300px;
+  background-position-y: -230px;
+  background-size: 1200px;
+  background-repeat: no-repeat;
+  border-end-start-radius: 100px;
+}
+.intro__nav {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 75px;
+}
+.intro__title {
+  font-size: 2rem;
+  text-align: center;
+  padding: 0px 10px;
+  margin-bottom: 20px;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+}
+.intro__subtitle {
+  padding: 0px 15px;
+  text-align: center;
+  font-family: "Overpass", sans-serif;
+  font-weight: 300;
+  margin-bottom: 60px;
+}
+.intro__btn {
+  width: 100%;
+  height: 45px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 10px;
+}
+.intro__btn button {
+  width: 45%;
+  border-radius: 25px;
+  border: hsl(0deg, 0%, 100%) solid 1.5px;
+  background-color: transparent;
+  color: hsl(0deg, 0%, 100%);
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-size: 0.9rem;
+}
+
+@media (min-width: 720px) {
+  .intro_bg {
+    background-image: url("./../../images/bg-pattern-intro-desktop.svg");
+  }
+}
 .attribution {
   font-size: 11px;
   text-align: center;
 }
-
 .attribution a {
   color: hsl(228deg, 45%, 44%);
 }
