--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -1,2 +1,78 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.intro{
+    width: 100vw;
+    height: 530px;
+    background:linear-gradient(to bottom, $gradient-intro-start, $gradient-intro-end);
+    border-end-start-radius: 100px;
+    color: $intro_body-text;
+    &__logo{
+        width: 80px;
+    }
+    &__hamburger{
+        width: 30px;
+    }
+    &_bg{
+        width: 100%;
+        height: 100%;
+        padding: 45px 30px 0px;
+        background-image:  url("./../../images/bg-pattern-intro-mobile.svg");
+        background-position-x: -300px ;
+        background-position-y: -230px ;
+        background-size: 1200px;
+        background-repeat: no-repeat;
+        border-end-start-radius: 100px;
+    }
+    &__nav{
+        width: 100%;
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 75px;
+    }
+    &__title{
+        font-size: 2rem;
+        text-align: center;
+        padding: 0px 10px;
+        margin-bottom: 20px;
+        font-family: $font-secondary;
+        font-weight: 300;
+    }
+    &__subtitle{
+        padding: 0px 15px;
+        text-align: center;
+        font-family: $font-primary;
+        font-weight: 300;
+        margin-bottom: 60px;
+    }
+    &__btn{
+        width: 100%;
+        height: 45px;
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 10px;
+        & button{
+            width: 45%;
+            border-radius: 25px;
+            border: $intro_body-text solid 1.5px;
+            background-color: transparent;
+            color: $intro_body-text;
+            font-family: $font-secondary;
+            font-weight: 700;
+            font-size: .9rem;
+        }
+    }
+}
+
+@media (min-width: 720px){
+    .intro_bg{
+        background-image:  url("./../../images/bg-pattern-intro-desktop.svg")
+    }
+}
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+    a{
+        color: hsl(228, 45%, 44%);
+    }
+}
