--- a/style/index.css
+++ b/style/index.css
@@ -31,7 +31,7 @@ html {
   height: 100%;
   padding: 45px 30px 0px;
   background-image: url("./../../images/bg-pattern-intro-mobile.svg");
-  background-position-x: -300px;
+  background-position-x: -290px;
   background-position-y: -230px;
   background-size: 1200px;
   background-repeat: no-repeat;
@@ -76,6 +76,10 @@ html {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
   font-size: 0.9rem;
+}
+.intro__btn button:first-child {
+  background-color: hsl(0deg, 0%, 100%);
+  color: hsl(355deg, 100%, 74%);
 }
 
 @media (min-width: 720px) {
