--- a/style/index.css
+++ b/style/index.css
@@ -5,23 +5,20 @@
   padding: 0;
 }
 
-html {
-  width: 100vw;
-}
-
 .secondary img, .third img, .fourth img {
   width: 250px;
 }
 
 .intro {
   width: 100vw;
-  height: 530px;
+  height: 600px;
   background: linear-gradient(to bottom, hsl(13deg, 100%, 72%), hsl(353deg, 100%, 62%));
   border-end-start-radius: 100px;
   color: hsl(0deg, 0%, 100%);
+  margin-bottom: 100px;
 }
 .intro__logo {
-  width: 80px;
+  width: 85px;
 }
 .intro__hamburger {
   width: 30px;
@@ -29,10 +26,10 @@ html {
 .intro_bg {
   width: 100%;
   height: 100%;
-  padding: 45px 30px 0px;
+  padding: 60px 25px 0px;
   background-image: url("./../../images/bg-pattern-intro-mobile.svg");
   background-position-x: -290px;
-  background-position-y: -230px;
+  background-position-y: -220px;
   background-size: 1200px;
   background-repeat: no-repeat;
   border-end-start-radius: 100px;
@@ -43,29 +40,31 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 75px;
+  margin-bottom: 90px;
 }
 .intro__title {
-  font-size: 2rem;
+  font-size: 2.1rem;
   text-align: center;
   padding: 0px 10px;
   margin-bottom: 20px;
   font-family: "Ubuntu", sans-serif;
   font-weight: 300;
+  line-height: 45px;
 }
 .intro__subtitle {
   padding: 0px 15px;
   text-align: center;
   font-family: "Overpass", sans-serif;
-  font-weight: 300;
-  margin-bottom: 60px;
+  font-weight: 400;
+  margin-bottom: 55px;
+  font-size: 1.2rem;
 }
 .intro__btn {
   width: 100%;
-  height: 45px;
+  height: 50px;
   display: flex;
   justify-content: space-between;
-  padding: 0px 10px;
+  padding: 0px 15px;
 }
 .intro__btn button {
   width: 45%;
@@ -93,6 +92,34 @@ html {
 }
 .attribution a {
   color: hsl(228deg, 45%, 44%);
+}
+
+.second {
+  width: 100%;
+  height: 1100px;
+}
+.second__ilustration {
+  width: 100%;
+  margin: 40px auto;
+}
+.second h2 {
+  font-family: "Overpass", sans-serif;
+  text-align: center;
+  color: hsl(208deg, 49%, 24%);
+  text-align: center;
+  padding: 0px 55px;
+}
+.second p {
+  margin: 15px 0px;
+  color: hsl(207deg, 13%, 34%);
+  padding: 0px 30px;
+  text-align: center;
+  line-height: 30px;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+}
+.second p:nth-child(4) {
+  margin-bottom: 40px;
 }
 
 /*# sourceMappingURL=index.css.map */
