--- a/style/sass/_intro.scss
+++ b/style/sass/_intro.scss
@@ -1,11 +1,12 @@
 .intro{
     width: 100vw;
-    height: 530px;
+    height: 600px;
     background:linear-gradient(to bottom, $gradient-intro-start, $gradient-intro-end);
     border-end-start-radius: 100px;
     color: $intro_body-text;
+    margin-bottom: 100px;
     &__logo{
-        width: 80px;
+        width: 85px;
     }
     &__hamburger{
         width: 30px;
@@ -13,10 +14,10 @@
     &_bg{
         width: 100%;
         height: 100%;
-        padding: 45px 30px 0px;
+        padding: 60px 25px 0px;
         background-image:  url("./../../images/bg-pattern-intro-mobile.svg");
         background-position-x: -290px ;
-        background-position-y: -230px ;
+        background-position-y: -220px ;
         background-size: 1200px;
         background-repeat: no-repeat;
         border-end-start-radius: 100px;
@@ -27,29 +28,31 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 75px;
+        margin-bottom: 90px;
     }
     &__title{
-        font-size: 2rem;
+        font-size: 2.1rem;
         text-align: center;
         padding: 0px 10px;
         margin-bottom: 20px;
         font-family: $font-secondary;
         font-weight: 300;
+        line-height: 45px;
     }
     &__subtitle{
         padding: 0px 15px;
         text-align: center;
         font-family: $font-primary;
-        font-weight: 300;
-        margin-bottom: 60px;
+        font-weight: 400;
+        margin-bottom: 55px;
+        font-size: 1.2rem;
     }
     &__btn{
         width: 100%;
-        height: 45px;
+        height: 50px;
         display: flex;
         justify-content: space-between;
-        padding: 0px 10px;
+        padding: 0px 15px;
         & button{
             width: 45%;
             border-radius: 25px;
