--- a/style/sass/index.scss
+++ b/style/sass/index.scss
@@ -1,5 +1,7 @@
 @import "./_global.scss";
+@import "./_mixins.scss";
 @import "./_intro.scss";
 @import "./_second.scss";
 @import "./_third.scss";
 @import "./_fourth.scss";
+@import "./_footer.scss";
